--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "body-parser": "^1.13.3",
     "ejs": "^2.3.3",
     "express": "^4.13.3",
-    "mongoose": "^4.1.3"
+    "mongoose": "^4.1.3",
+    "path": "^0.11.14"
   }
 }
