--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express-session": "^1.11.3",
     "mongoose": "^4.1.3",
     "passport": "^0.3.0",
+    "passport-facebook": "^2.0.0",
     "passport-google-oauth": "^0.2.0",
     "path": "^0.11.14"
   }
